--- a/templats/dateil.html
+++ b/templats/dateil.html
@@ -17,6 +17,9 @@
 {{ product.image }}<br>
 {{ product.stock }}<br>
 {{ product.created_at }}<br>
+<button>
+    <a href="{% url 'update' product.pk  %}">Edit</a>
+</button>
 
 
 
