--- a/templats/dateil.html
+++ b/templats/dateil.html
@@ -20,6 +20,12 @@
 <button>
     <a href="{% url 'update' product.pk  %}">Edit</a>
 </button>
+<button>
+    <a href="{% url 'delete' product.pk  %}">Del</a>
+</button>
+<button>
+    <a href="{% url 'home'   %}">Home</a>
+</button>
 
 
 
