--- a/templats/home.html
+++ b/templats/home.html
@@ -11,6 +11,7 @@
     <a href="{% url 'dateil' i.pk %}">
         {{ i.name }}
     </a><br>
-{% endfor %}
-
+{% endfor %}<br>
+<button>
 <a href="{% url 'create' %}">Create</a>
+    </button>
