--- a/templats/home.html
+++ b/templats/home.html
@@ -1,4 +1,12 @@
 <h1>Hamma mahsulot</h1>
+<form method="get">
+    <input type="text" name="q" placeholder="Qdru..." value="{{ q }}">
+    <button type="submit">topish</button>
+</form>
+
+
+
+
 
 
 {% for c in categories %}
